--- a/index.html
+++ b/index.html
@@ -13,14 +13,61 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Parisienne' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <section id="home">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12 text-center">
+                <h1 class="extra-margin-bottom">These kids are getting married!</h1>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-3 col-xs-6 col-sm-offset-3">
+                <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=250×300&w=250&h=300" class="school-pic" />
+                <p class="text-center extra-margin-bottom">Rachel Hewes</p>
+              </div>
+              <div class="col-sm-3 col-xs-6">
+                <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=250×300&w=250&h=300" class="school-pic"/>
+                <p class="text-center extra-margin-bottom">John DeWolf</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12">
+                <p class="text-center">Save the Date | October 9, 2016</p>
+              </div>
+            </div>
+          </div>
+
+        </section>
+        <section id="details">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-6 text-box">
+                <h2>Wedding Details</h2>
+                <ul>
+                  <li><a href="http://www.cranwell.com/" target="_blank">Cranwell Spa &amp; Golf Resort</a></li>
+                  <li>55 Lee Road</li>
+                  <li>Lenox, MA 01240</li>
+                  <li>October 9, 2016</li>
+                </ul>
+
+                <h2>Accommodations</h2>
+                <ul>
+                  <li><a href="http://hamptoninn3.hilton.com/en/hotels/massachusetts/hampton-inn-and-suites-berkshires-lenox-SFYLXHX/index.html" target="_blank">Hampton Inn</a></li>
+                  <li><a href="http://www.cranwell.com/" target="_blank">Cranwell Spa &amp; Golf Resort</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
