wedding party sections

--- a/index.html
+++ b/index.html
@@ -68,6 +68,64 @@
             </div>
           </div>
         </section>
+        <section id="bridesmaids" class="wedding-party">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12 text-center extra-margin-bottom">
+                <h2>The Bridesmaids</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-4 featureImage" id="bridesmaidsFeature">
+              <img src="img/matt-dewolf.jpg" />
+            </div>
+              <div class="col-sm-4">
+                <ul>
+                  <li id=""><img src="" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Sarah Zappala - Maid of Honor</li>
+                  <li id=""><img src="" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Kaylin Burke</li>
+                  <li id=""><img src="" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Catherine DeWolf</li>
+                </ul>
+              </div>
+              <div class="col-sm-4">
+                 <ul>
+                  <li id=""><img src="" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Jill Levine</li>
+                  <li id=""><img src="" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Courtney Matsuishi</li>
+                  <li id=""><img src="" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Steph Pintal</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section id="groomsmen" class="wedding-party">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12 text-center extra-margin-bottom">
+                <h2>The Groomsmen</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-4">
+                <ul>
+                  <li id="matt-dewolf"><img src="img/matt-thumbnail.jpg" class="thumbnail weddingPartyMember active" /><span class="weddingPartyMember active">Matthew DeWolf - Best Man</li>
+                  <li id="ryan-hood"><img src="img/ryan-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Ryan Hood</span></li>
+                  <li id="bobby-matsuishi"><img src="img/bobby-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Robert Matsuishi</span></li>
+                  <li id="brian-pickard"><img src="img/brian-thumbnail.png" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Brian Pickard</span></li>
+                </ul>
+              </div>
+              <div class="col-sm-4">
+                <ul>
+                  <li id="matt-roux"><img src="img/roux-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Matthew Roux</span></li>
+                  <li id="john-skutnik"><img src="img/john-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">John Skutnik</span></li>
+                  <li id="tom-zappala"><img src="img/tom-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Tom Zappala</span></li>
+                </ul>
+              </div>
+              <div class="col-sm-4 featureImage" id="groomsmenFeature">
+                <img src="img/matt-dewolf.jpg" />
+              </div>
+            </div>
+          </div>
+        </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
