update to photos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
         <section id="home">
           <div class="container">
-            <div class="row">
+            <div class="r
+            ow">
               <div class="col-sm-12 text-center">
                 <h1 class="extra-margin-bottom">These kids are getting married!</h1>
               </div>
@@ -77,20 +78,20 @@
             </div>
             <div class="row">
               <div class="col-sm-4 featureImage" id="bridesmaidsFeature">
-              <img src="img/matt-dewolf.jpg" />
+              <img src="img/sarah-zappala.jpg" />
             </div>
               <div class="col-sm-4">
                 <ul>
-                  <li id=""><img src="" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Sarah Zappala - Maid of Honor</li>
-                  <li id=""><img src="" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Kaylin Burke</li>
-                  <li id=""><img src="" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Catherine DeWolf</li>
+                  <li id="sarah-zappala"><img src="img/sarah-thumbnail.png" class="thumbnail weddingPartyMember active" /><span class="weddingPartyMember">Sarah Zappala - Maid of Honor</li>
+                  <li id="kaylin-burke"><img src="img/kay-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Kaylin Burke</li>
+                  <li id="kate-dewolf"><img src="img/kate-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Catherine DeWolf</li>
                 </ul>
               </div>
               <div class="col-sm-4">
                  <ul>
-                  <li id=""><img src="" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Jill Levine</li>
-                  <li id=""><img src="" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Courtney Matsuishi</li>
-                  <li id=""><img src="" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Steph Pintal</li>
+                  <li id="jill-levine"><img src="img/jill-thumbnail.png" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Jill Levine</li>
+                  <li id="coutney-matsuishi"><img src="img/court-thumbnail.png" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Courtney Matsuishi</li>
+                  <li id="steph-pintal"><img src="img/steph-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Steph Pintal</li>
                 </ul>
               </div>
             </div>
