--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             </div>
             <div class="row">
               <div class="col-sm-3 col-xs-6 col-sm-offset-3">
-                <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=250×300&w=250&h=300" class="school-pic" />
+                <img src="img/rache.jpg" class="school-pic" />
                 <p class="text-center extra-margin-bottom">Rachel Hewes</p>
               </div>
               <div class="col-sm-3 col-xs-6">
-                <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=250×300&w=250&h=300" class="school-pic"/>
+                <img src="img/jack.jpg" class="school-pic"/>
                 <p class="text-center extra-margin-bottom">John DeWolf</p>
               </div>
             </div>
