--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
         <section id="home">
           <div class="container">
-            <div class="r
-            ow">
+            <div class="row">
               <div class="col-sm-12 text-center">
                 <h1 class="extra-margin-bottom">These kids are getting married!</h1>
               </div>
