--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-6 text-box">
-                <h2>Wedding Details</h2>
+                <h3>Wedding Details</h3>
                 <ul>
                   <li><a href="http://www.cranwell.com/" target="_blank">Cranwell Spa &amp; Golf Resort</a></li>
                   <li>55 Lee Road</li>
@@ -59,7 +59,7 @@
                   <li>October 9, 2016</li>
                 </ul>
 
-                <h2>Accommodations</h2>
+                <h3>Accommodations</h3>
                 <ul>
                   <li><a href="http://hamptoninn3.hilton.com/en/hotels/massachusetts/hampton-inn-and-suites-berkshires-lenox-SFYLXHX/index.html" target="_blank">Hampton Inn</a></li>
                   <li><a href="http://www.cranwell.com/" target="_blank">Cranwell Spa &amp; Golf Resort</a></li>
@@ -76,22 +76,24 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-sm-4 featureImage" id="bridesmaidsFeature">
-              <img src="img/sarah-zappala.jpg" />
-            </div>
-              <div class="col-sm-4">
+              <div class="col-sm-4 col-sm-push-4">
                 <ul>
                   <li id="sarah-zappala"><img src="img/sarah-thumbnail.png" class="thumbnail weddingPartyMember active" /><span class="weddingPartyMember">Sarah Zappala - Maid of Honor</li>
                   <li id="kaylin-burke"><img src="img/kay-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Kaylin Burke</li>
                   <li id="kate-dewolf"><img src="img/kate-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Catherine DeWolf</li>
                 </ul>
               </div>
-              <div class="col-sm-4">
-                 <ul>
+
+              <div class="col-sm-4 col-sm-push-4">
+                <ul>
                   <li id="jill-levine"><img src="img/jill-thumbnail.png" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Jill Levine</li>
                   <li id="coutney-matsuishi"><img src="img/court-thumbnail.png" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Courtney Matsuishi</li>
                   <li id="steph-pintal"><img src="img/steph-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Steph Pintal</li>
                 </ul>
+              </div>
+
+              <div class="col-sm-4 col-sm-pull-8 featureImage" id="bridesmaidsFeature">
+                <img src="img/sarah-zappala.jpg" />
               </div>
             </div>
           </div>
