--- a/index.html
+++ b/index.html
@@ -78,17 +78,26 @@
             <div class="row">
               <div class="col-sm-4 col-sm-push-4">
                 <ul>
-                  <li id="sarah-zappala"><img src="img/sarah-thumbnail.png" class="thumbnail weddingPartyMember active" /><span class="weddingPartyMember">Sarah Zappala - Maid of Honor</li>
-                  <li id="kaylin-burke"><img src="img/kay-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Kaylin Burke</li>
-                  <li id="kate-dewolf"><img src="img/kate-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Catherine DeWolf</li>
+                  <li id="sarah-zappala">
+                    <a href="#bridesmaids" class="weddingPartyMember active">
+                      <img src="img/sarah-thumbnail.png" class="thumbnail" />
+                    </a><a href="#bridesmaids" class="weddingPartyMember active wp-name">Sarah Zappala - Maid of Honor</a></li>
+                  <li id="kaylin-burke">
+                    <a href="#bridesmaids" class="weddingPartyMember">
+                      <img src="img/kay-thumbnail.jpg" class="thumbnail" />
+                    </a><a href="#bridesmaids" class="weddingPartyMember wp-name">Kaylin Burke</a></li>
+                  <li id="kate-dewolf"><a href="#bridesmaids" class="weddingPartyMember"><img src="img/kate-thumbnail.jpg" class="thumbnail" /></a><a href="#bridesmaids" class="weddingPartyMember wp-name">Catherine DeWolf</a></li>
                 </ul>
               </div>
 
               <div class="col-sm-4 col-sm-push-4">
                 <ul>
-                  <li id="jill-levine"><img src="img/jill-thumbnail.png" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Jill Levine</li>
-                  <li id="coutney-matsuishi"><img src="img/court-thumbnail.png" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Courtney Matsuishi</li>
-                  <li id="steph-pintal"><img src="img/steph-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Steph Pintal</li>
+                  <li id="jill-levine">
+                    <a href="#bridesmaids" class="weddingPartyMember"><img src="img/jill-thumbnail.png" class="thumbnail" /></a><a href="#bridesmaids" class="weddingPartyMember wp-name">Jill Levine</a></li>
+                  <li id="coutney-matsuishi">
+                    <a href="#bridesmaids" class="weddingPartyMember"><img src="img/court-thumbnail.png" class="thumbnail" /></a><a href="#bridesmaids" class="weddingPartyMember wp-name">Courtney Matsuishi</a></li>
+                  <li id="steph-pintal">
+                    <a href="#bridesmaids" class="weddingPartyMember"><img src="img/steph-thumbnail.jpg" class="thumbnail" /></a><a href="#bridesmaids" class="weddingPartyMember wp-name">Steph Pintal</a></li>
                 </ul>
               </div>
 
@@ -109,17 +118,29 @@
             <div class="row">
               <div class="col-sm-4">
                 <ul>
-                  <li id="matt-dewolf"><img src="img/matt-thumbnail.jpg" class="thumbnail weddingPartyMember active" /><span class="weddingPartyMember active">Matthew DeWolf - Best Man</li>
-                  <li id="ryan-hood"><img src="img/ryan-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Ryan Hood</span></li>
-                  <li id="bobby-matsuishi"><img src="img/bobby-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Robert Matsuishi</span></li>
-                  <li id="brian-pickard"><img src="img/brian-thumbnail.png" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Brian Pickard</span></li>
+                  <li id="matt-dewolf"><a href="#groomsmen" class="weddingPartyMember active"><img src="img/matt-thumbnail.jpg" class="thumbnail" /></a><a class="weddingPartyMember wp-name active">Matthew DeWolf - Best Man</a></li>
+                  <li id="ryan-hood"><a href="#groomsmen" class="weddingPartyMember"><img src="img/ryan-thumbnail.jpg" class="thumbnail" /></a><a href="#groomsmen" class="weddingPartyMember wp-name">Ryan Hood</a></li>
+                  <li id="bobby-matsuishi"><a href="#groomsmen" class="weddingPartyMember"><img src="img/bobby-thumbnail.jpg" class="thumbnail" /></a><a href="#groomsmen" class="weddingPartyMember wp-name">Robert Matsuishi</a></li>
+                  <li id="brian-pickard"><a href="#groomsmen" class="weddingPartyMember"><img src="img/brian-thumbnail.png" class="thumbnail" /></a><a href="#groomsmen" class="weddingPartyMember wp-name">Brian Pickard</a></li>
                 </ul>
               </div>
               <div class="col-sm-4">
                 <ul>
-                  <li id="matt-roux"><img src="img/roux-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Matthew Roux</span></li>
-                  <li id="john-skutnik"><img src="img/john-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">John Skutnik</span></li>
-                  <li id="tom-zappala"><img src="img/tom-thumbnail.jpg" class="thumbnail weddingPartyMember" /><span class="weddingPartyMember">Tom Zappala</span></li>
+                  <li id="matt-roux">
+                    <a href="#groomsmen" class="weddingPartyMember">
+                      <img src="img/roux-thumbnail.jpg" class="thumbnail" />
+                    </a>
+                    <a href="#groomsmen" class="weddingPartyMember wp-name">Matthew Roux</a></li>
+                  <li id="john-skutnik">
+                    <a href="#groomsmen" class="weddingPartyMember">
+                      <img src="img/john-thumbnail.jpg" class="thumbnail" />
+                    </a>
+                    <a href="#groomsmen" class="weddingPartyMember wp-name">John Skutnik</a></li>
+                  <li id="tom-zappala">
+                    <a href="#groomsmen" class="weddingPartyMember">
+                      <img src="img/tom-thumbnail.jpg" class="thumbnail" />
+                    </a>
+                    <a href="#groomsmen" class="weddingPartyMember wp-name">Tom Zappala</a></li>
                 </ul>
               </div>
               <div class="col-sm-4 featureImage" id="groomsmenFeature">
@@ -137,12 +158,14 @@
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-53444933-4', 'auto');
+          ga('send', 'pageview');
+
         </script>
     </body>
 </html>
