fade in and out for images

--- a/index.html
+++ b/index.html
@@ -87,17 +87,19 @@
                       <img src="img/kay-thumbnail.jpg" class="thumbnail" />
                     </a><a href="#bridesmaids" class="weddingPartyMember wp-name">Kaylin Burke</a></li>
                   <li id="kate-dewolf"><a href="#bridesmaids" class="weddingPartyMember"><img src="img/kate-thumbnail.jpg" class="thumbnail" /></a><a href="#bridesmaids" class="weddingPartyMember wp-name">Catherine DeWolf</a></li>
+                  <li id="jill-levine">
+                    <a href="#bridesmaids" class="weddingPartyMember"><img src="img/jill-thumbnail.png" class="thumbnail" /></a><a href="#bridesmaids" class="weddingPartyMember wp-name">Jill Levine</a></li>
                 </ul>
               </div>
 
               <div class="col-sm-4 col-sm-push-4">
                 <ul>
-                  <li id="jill-levine">
-                    <a href="#bridesmaids" class="weddingPartyMember"><img src="img/jill-thumbnail.png" class="thumbnail" /></a><a href="#bridesmaids" class="weddingPartyMember wp-name">Jill Levine</a></li>
                   <li id="coutney-matsuishi">
                     <a href="#bridesmaids" class="weddingPartyMember"><img src="img/court-thumbnail.png" class="thumbnail" /></a><a href="#bridesmaids" class="weddingPartyMember wp-name">Courtney Matsuishi</a></li>
                   <li id="steph-pintal">
                     <a href="#bridesmaids" class="weddingPartyMember"><img src="img/steph-thumbnail.jpg" class="thumbnail" /></a><a href="#bridesmaids" class="weddingPartyMember wp-name">Steph Pintal</a></li>
+                  <li id="jennie-pleate">
+                    <a href="#bridesmaids" class="weddingPartyMember"><img src="img/jennie-thumbnail.jpg" class="thumbnail" /></a><a href="#bridesmaids" class="weddingPartyMember wp-name">Jennie Pleate</a></li>
                 </ul>
               </div>
 
