--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <![endif]-->
 
         <section id="home">
-          <div class="container">
+          <div class="content">
             <div class="row">
               <div class="col-sm-12 text-center">
                 <h1 class="extra-margin-bottom">These kids are getting married!</h1>
@@ -48,7 +48,7 @@
 
         </section>
         <section id="details">
-          <div class="container">
+          <div class="content">
             <div class="row">
               <div class="col-sm-6 text-box">
                 <h3>Wedding Details</h3>
@@ -69,7 +69,7 @@
           </div>
         </section>
         <section id="bridesmaids" class="wedding-party">
-          <div class="container">
+          <div class="content">
             <div class="row">
               <div class="col-sm-12 text-center extra-margin-bottom">
                 <h2>The Bridesmaids</h2>
@@ -111,7 +111,7 @@
         </section>
 
         <section id="groomsmen" class="wedding-party">
-          <div class="container">
+          <div class="content">
             <div class="row">
               <div class="col-sm-12 text-center extra-margin-bottom">
                 <h2>The Groomsmen</h2>
